# megaIAAA

./: .gitattributes  Makefile  README.md
Lemniscata/: Dockerfile  Lemniscata_de_Penin_Livro_Branco.md  README.md  pyproject.toml  requirements.txt
Lemniscata/configs/: default.yaml
Lemniscata/docs/: lemniscata_de_penin.md
Lemniscata/scripts/: run_rzero.py  run_ttddr.py  train_lora.py
Lemniscata/src/lemnisiana/: __init__.py
Lemniscata/src/lemnisiana/adapters/: gating.py  promoter.py
Lemniscata/src/lemnisiana/autopoietic/: __init__.py
Lemniscata/src/lemnisiana/backlog/: capabilities_registry.yaml
Lemniscata/src/lemnisiana/backpropamine/: __init__.py
Lemniscata/src/lemnisiana/bench/: gsm8k_loader.py  mbpp_runner.py  mmlu_loader.py
Lemniscata/src/lemnisiana/dashboard/: app.py
Lemniscata/src/lemnisiana/ednag/: __init__.py
Lemniscata/src/lemnisiana/legacy_core/: iaaa_advanced_implementations.py  iaaa_core_algorithms.py  iaaa_integrated_system.py
Lemniscata/src/lemnisiana/metrics/: calibration.py  prometheus_exporter.py
Lemniscata/src/lemnisiana/providers/: __init__.py  ollama_provider.py  openai_provider.py  peft_lora.py
Lemniscata/src/lemnisiana/quantum/: __init__.py
Lemniscata/src/lemnisiana/rdis/: __init__.py
Lemniscata/src/lemnisiana/rzero/: on_policy.py
Lemniscata/tests/: test_smoke.py
Lemniscata/tests/chaos/: test_chaos.py
Lemniscata/tests/e2e/: test_full_loop.py
Lemniscata/tests/integration/: test_ednag_backpropamine.py
Lemniscata/tests/soak/: test_soak.py
Lemniscata/tests/unit/: test_backpropamine.py  test_ednag.py
(+593 files in other folders)
